--- a/mediarepo-ui/src/app/components/shared/file/file-card/file-card.component.scss
+++ b/mediarepo-ui/src/app/components/shared/file/file-card/file-card.component.scss
@@ -1,28 +1,68 @@
 @import "src/colors";
 
-mat-card {
-    height: calc(100% - 32px);
-    width: calc(100% - 32px);
-    user-select: none;
+:host {
+    display: block;
+    overflow: hidden;
+    border-radius: 5px;
     cursor: pointer;
-    background: $background-lighter-05;
+    user-select: none;
+    position: relative;
 }
 
-mat-card.selected {
-    background: $primary-darker-10;
-}
-
-mat-card-content {
+.file-card-inner {
+    background-color: $background-lighter-05;
     height: 100%;
     width: 100%;
-}
+    margin: 0;
+    display: flex;
+    position: relative;
 
-app-busy-indicator {
-    height: 100%;
-    width: 100%;
+    &.selected {
+        background-color: $primary-darker-10;
+    }
 }
 
 .entry-image {
-    width: 100%;
-    height: 100%;
+    margin: 10px;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    display: flex;
+}
+
+.loading-indicator {
+    display: block;
+    background-color: $primary;
+    animation-name: pulse;
+    animation-duration: 3s;
+    border-radius: 1em;
+    width: 2em;
+    height: 2em;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes pulse {
+    2% {
+        border-radius: 1em;
+        width: 2em;
+        height: 2em;
+    }
+
+    48% {
+        border-radius: 2em;
+        width: 4em;
+        height: 4em;
+    }
+
+    52% {
+        border-radius: 2em;
+        width: 4em;
+        height: 4em;
+    }
+
+    98% {
+        border-radius: 1em;
+        width: 2em;
+        height: 2em;
+    }
 }
