--- a/mediarepo-ui/src/app/components/shared/file/file-multiview/file-grid/file-grid.component.scss
+++ b/mediarepo-ui/src/app/components/shared/file/file-multiview/file-grid/file-grid.component.scss
@@ -3,9 +3,7 @@
 app-file-card {
     height: 250px;
     width: 100%;
-    padding: 5px;
-    display: block;
-    overflow: hidden;
+    margin: 5px;
 }
 
 .file-scroll {
